--- a/style.css
+++ b/style.css
@@ -10,8 +10,24 @@
     align-items: center;
     padding: 10px;
 }
-.texto-pesquisa{
-    color: darkgrey;
+.caixa-pesquisa{
+    border: none;
+
+}
+
+#barra-pesquisa{
+    padding: 8px;
+    width: 250px;
+    border: none;
+
+}
+
+.logo-pesquisa{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 500px;
+    align-items: center;
 }
 
 .menu-lista{
@@ -36,14 +52,16 @@ li {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10px 15px;
-    border: 1px solid #EB662B;
-    background-color: #EB662B;
-    border-radius: 200px;
+
 }
 .texto-login{
     color: white;
     font-size: 12px;
+    border: none;
+    background-color: #EB662B;
+    cursor: pointer;
+    padding: 10px 15px;
+    border-radius: 200px;
 
 }
 
@@ -311,6 +329,7 @@ hr{
     justify-content: center;
     gap: 30px;
     width: 1600px;
+    flex-wrap: wrap;
 }
 .titulo-card{
     font-family: arial;
@@ -318,4 +337,12 @@ hr{
     width: 290px;
     font-weight: bold;
 
+}
+.texto-localidade-card{
+    font-family: arial;
+    font-size: 12px;
+    color: darkgrey;
+    width: 110px;
+    display: flex;
+    justify-content: center;
 }
