--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@ justify-content: center;
     align-items: center;
     width: 135px;
     height: 200px;
-    gap: 5px;
+    gap: px;
     
 }
 
@@ -270,7 +270,7 @@ justify-content: center;
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 50px;
+    justify-content: space-between;
     padding: 10px;
 }
 .img-popular{
@@ -288,7 +288,6 @@ justify-content: center;
 }
 
 .continuacerto{
-    
     width: 1320px;
     display: flex;
     align-items: start;
@@ -343,12 +342,12 @@ hr{
     gap: 4px;
 }
 .caixa-cards{
-    
     display: flex;
-    flex-direction: row;
-    gap: 5px;
-    width: 1320px;
-    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 820px;
+    margin-top: 80px;
+    
 }
 .titulo-card{
     font-family: inter;
@@ -466,8 +465,8 @@ hr{
 }
 .caixa-reviews{
     background-image: url("./assets/img/banner-reviews.png");
-    width: 1320px;
-    height: 610px;
+    width: 100%;
+    height: 871px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -478,9 +477,148 @@ hr{
     font-size: 30px;
     font-weight: bold;
 }
+.img-review{
+    padding:50px;
+}
 .texto-reviews{
     font-family: inter;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.subtitulo-reviews{
+    color: #EB662B;
+    padding: 20px;
+    font-size: 18px;
+}
+.texto-subtitulo-reviews{
+    font-size: 20px;
+    width: 600px;
+    text-align: center;
+}
+.usuario{
+    font-weight: bold;
+}
+.texto-usuario{
+    font-family: inter;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 40px;
+    font-size: 14px;
+}
+.grupo-card{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+   
+    width: 100%;
+    gap: 15px;
+}
+.caixa-cards-top{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 80px;
+}
+.card-popular-top{
+    border: 1px solid lightgray;
+    background-color: white;
+    width: 300px;
+    height: 380px;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+.grupo-card-top{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    gap: 15px;
+}
+.section-bottom-top{ 
+    margin-top: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.fundo-top-card{
+    background-color: #f5f5f5;
+    border-radius: 15px;
+    width: 1530px;
+    height: 767px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column
+}
+.section-banner-telefone{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.caixa-banner-telefone{
+    background-image: url(./assets/img/banner-telefone.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 1530px;
+    height: 514px;
+}
+.titulo-telefone{
+    color: white;
+    font-family: inter;
+    font-size: 40px;
+    width: 365px;
+    font-weight: bold;
+    
+    
+}
+.texto-telefone{
+    color: white;
+    font-family: inter;
+    font-size: 13px;
+    width: 313px;
+    margin-top: 20px;
+
+}
+.texto-email-telefone{
+    color: white;
+    font-family: inter;
+    font-size: 16px;
+    margin-top: 20px;
+}
+.caixa-pesquisa-telefone{
+    width: 350px;
+    height: 60px;
+    border-radius: 12px;
+    border: none;
+    margin-top: 15px; 
+}
+.btn-telefone{
+    width: 106px;
+    height: 60px;
+    border-radius: 12px;
+    border: none;
+    color: #4A43C4;
+}
+.caixa-inputs-telefone{
+    background-color: #EB662B;
+    width: 100%;
+    gap: 0px;
+}
+.caixa-texto-telefone{
+    width: 490px;
 }
