--- a/style.css
+++ b/style.css
@@ -615,10 +615,84 @@ hr{
     color: #4A43C4;
 }
 .caixa-inputs-telefone{
-    background-color: #EB662B;
+
     width: 100%;
-    gap: 0px;
 }
 .caixa-texto-telefone{
-    width: 490px;
+    width: 500px;
+    padding: 90px;
+}
+.section-travel{
+    display: flex;
+    justify-content: center;
+}
+.caixa-travel{
+    display: flex;
+    flex-direction: column;
+    width: 1320px;
+    margin-top: 60px;
+}
+.caixa-img-travel{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 60px;
+}
+.textos-travel{
+    display: flex;
+    flex-direction: column
+}
+.sobre-travels{
+    font-family: inter;
+    font-size: 17px;
+    font-weight: bold;
+    margin-top: 15px;
+}
+.texto-data-travels{
+    font-family: inter;
+    font-size: 13px;
+}
+.texto-by-travels{
+    font-family: inter;
+    font-size: 13px;
+}
+.data-by-travels{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    margin-top: 15px;
+}
+footer{
+    display: flex;
+    justify-content: center;
+}
+.caixa-footer{
+    background-image: url(./assets/img/footer.png);
+    background-repeat: repeat;
+    background-size: cover;
+    width: 1800px;
+    height: 655px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+hr{
+    border: none;
+    background-color: #EB662B;
+    width: 1290px;
+    height: 1px;
+}
+.caixa-info-footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    
+}
+.caixa-footer-numero{
+    display: flex;
+    justify-content: space-around;
+    font-family: inter;
+    width: 1290px;
 }
